Added timer for training

--- a/GAN_distributed_training.ipynb
+++ b/GAN_distributed_training.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "GAN_distributed_training.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOHq1LT3hvvb6J070lYUxfn",
+      "authorship_tag": "ABX9TyO1W2h7b7OdvbyT45VGTheW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +15,7 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -104,14 +103,14 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "global_batch_size =256 \n",
+        "global_batch_size = 256 \n",
         "batchsize_per_replica = int(global_batch_size / strategy.num_replicas_in_sync)\n",
         "CONFIG = {\n",
         "    \"BUFFER_SIZE\":60000,\n",
         "    \"BATCH_SIZE_PER_REPLICA\":batchsize_per_replica,\n",
         "    \"GLOBAL_BATCH_SIZE\":global_batch_size,\n",
         "    \"REDUCTION_STRATEGY\":tf.keras.losses.Reduction.NONE,\n",
-        "    \"EPOCHS\":50,\n",
+        "    \"EPOCHS\":30,\n",
         "    \"NOISE_DIM\":100,\n",
         "    \"num_examples_to_generate\":16,\n",
         "    \"NOISE_SHAPE\":(100,),\n",
@@ -508,8 +507,9 @@
         "    return reduced_loss_vector\n",
         "\n",
         "  def train(self, train_dataset_distributed, test_dataset_distributed, epochs):\n",
+        "    start_training = time.time()\n",
         "    for epoch in range(epochs):\n",
-        "      start = time.time()\n",
+        "      start_epoch = time.time()\n",
         "\n",
         "      # initialize training parameter\n",
         "      total_train_loss = [0., 0.]\n",
@@ -518,7 +518,7 @@
         "      for image_batch in train_dataset_distributed:\n",
         "        total_train_loss = tf.math.add(total_train_loss, self.distributed_train_step(image_batch))\n",
         "        num_train_batches += 1\n",
-        "      total_train_loss = total_train_loss / float(num_train_batches)  #* CONFIG[\"BATCH_SIZE_PER_REPLICA\"]\n",
+        "      total_train_loss = total_train_loss / float(num_train_batches)\n",
         "\n",
         "      if test_dataset_distributed is not None:\n",
         "        # initialize training parameter\n",
@@ -528,20 +528,22 @@
         "        for image_batch in test_dataset_distributed:\n",
         "          total_test_loss = tf.math.add(total_test_loss, self.distributed_test_step(image_batch))\n",
         "          num_test_batches += 1\n",
-        "        total_test_loss = total_test_loss / float(num_test_batches) # * CONFIG[\"BATCH_SIZE_PER_REPLICA\"]\n",
+        "        total_test_loss = total_test_loss / float(num_test_batches)\n",
         "\n",
         "      # Produce images for the GIF as you go\n",
         "      display.clear_output(wait=True)\n",
         "      self.generate_and_save_images(epoch + 1, latent_noise)\n",
         "\n",
-        "      print ('Time for epoch {0:5} is {1:.3f} sec'.format(epoch + 1, time.time()-start))\n",
+        "      print ('Total training time is {0:.3f} sec'.format(time.time()-start_training))\n",
+        "      print ('Time for epoch {0:5} is {1:.3f} sec'.format(epoch + 1, time.time()-start_epoch))\n",
         "      print(\"Train:\\nGen. Loss: {0:.6f} \\nDisc. Loss: {1:.6f}\".format(total_train_loss[0], total_train_loss[1]))\n",
         "      if test_dataset_distributed is not None:\n",
         "        print(\"Test:\\nGen. Loss: {0:.6f} \\nDisc. Loss: {1:.6f}\".format(total_test_loss[0], total_test_loss[1]))\n",
         "\n",
         "    # Generate after the final epoch\n",
         "    display.clear_output(wait=True)\n",
-        "    self.generate_and_save_images(epochs, latent_noise)\n"
+        "    self.generate_and_save_images(epochs, latent_noise)\n",
+        "    print ('Total training time is {0:.3f} sec'.format(time.time()-start_training))\n"
       ],
       "metadata": {
         "id": "bb6OZjjIPFKG"
@@ -584,14 +586,24 @@
         "    discriminator_loss = discriminator_loss\n",
         ")\n",
         "ganModel.print_summary()\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "L236qzfxF9HN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "ganModel.train(\n",
         "    train_dataset_distributed=train_dataset_distributed,\n",
         "    test_dataset_distributed = None,# test_dataset, \n",
         "    epochs = CONFIG[\"EPOCHS\"])"
       ],
       "metadata": {
-        "id": "L236qzfxF9HN"
+        "id": "wYPrggrfiXKJ"
       },
       "execution_count": null,
       "outputs": []
