minor fixes of typos, added interface for config

--- a/GAN_distributed_training.ipynb
+++ b/GAN_distributed_training.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "GAN_distributed_training.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO1W2h7b7OdvbyT45VGTheW",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMqaJAn3C/47yJinA/9q8Ur",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +16,7 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU"
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -39,6 +40,31 @@
       "metadata": {
         "id": "Rkt9n7HMrYuz"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Notebook Settings\n",
+        "The following Parameters can be adapted to influence the behavior of the notebook."
+      ],
+      "metadata": {
+        "id": "3hjSmc-pflPm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "IMAGE_SHAPE = (28,28,1) #@param\n",
+        "NOISE_DIM = 100 #@param {type:\"integer\"} \n",
+        "GLOBAL_BATCH_SIZE = 256 #@param {type:\"integer\"}\n",
+        "EPOCHS =  30 #@param {type:\"integer\"}\n",
+        "NUM_EXAMPLES_TO_GENERATE = 16 #@param {type:\"integer\"}"
+      ],
+      "metadata": {
+        "id": "0dcYZAFvffu8"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -103,19 +129,17 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "global_batch_size = 256 \n",
-        "batchsize_per_replica = int(global_batch_size / strategy.num_replicas_in_sync)\n",
         "CONFIG = {\n",
         "    \"BUFFER_SIZE\":60000,\n",
-        "    \"BATCH_SIZE_PER_REPLICA\":batchsize_per_replica,\n",
-        "    \"GLOBAL_BATCH_SIZE\":global_batch_size,\n",
+        "    \"BATCH_SIZE_PER_REPLICA\":int(GLOBAL_BATCH_SIZE / strategy.num_replicas_in_sync),\n",
+        "    \"GLOBAL_BATCH_SIZE\":GLOBAL_BATCH_SIZE,\n",
         "    \"REDUCTION_STRATEGY\":tf.keras.losses.Reduction.NONE,\n",
-        "    \"EPOCHS\":30,\n",
-        "    \"NOISE_DIM\":100,\n",
-        "    \"num_examples_to_generate\":16,\n",
-        "    \"NOISE_SHAPE\":(100,),\n",
+        "    \"EPOCHS\":EPOCHS,\n",
+        "    \"NOISE_DIM\":NOISE_DIM,\n",
+        "    \"NUM_EXAMPLES_TO_GENERATE\":NUM_EXAMPLES_TO_GENERATE,\n",
+        "    \"NOISE_SHAPE\":(NOISE_DIM,),\n",
         "    #\"IMAGE_SHAPE\":(32,32,3)\n",
-        "    \"IMAGE_SHAPE\":(28,28,1)\n",
+        "    \"IMAGE_SHAPE\": IMAGE_SHAPE\n",
         "}\n",
         "\n",
         "GLOBAL_PARAM = {\n",
@@ -137,7 +161,7 @@
         "\n",
         "# You will reuse this seed overtime (so it's easier)\n",
         "# to visualize progress in the animated GIF)\n",
-        "latent_noise = tf.random.normal([CONFIG[\"num_examples_to_generate\"], CONFIG[\"NOISE_DIM\"]])"
+        "latent_noise = tf.random.normal([CONFIG[\"NUM_EXAMPLES_TO_GENERATE\"], CONFIG[\"NOISE_DIM\"]])"
       ],
       "metadata": {
         "id": "HLHkT6j4CY_8"
