--- a/Softmax_Temperature.ipynb
+++ b/Softmax_Temperature.ipynb
@@ -4,6 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a href=\"https://colab.research.google.com/github/sascha-kirch/ML_Notebooks/blob/main/Softmax_Temperature.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Softmax Temperature Playground\n",
         "\n",
         "The Softmax operation is a commonly used transformation from logits (predictions of a classifier) to a probability distribution, where the sum of all values is 1.\n",
